packages/hyperchad/template/tests/warnings/summary-not-first-child.stderr
error: Code generation failed in container! macro.

       Error: <summary> must be the first child of <details>

       This usually indicates:
       - Unknown element types
       - Invalid attribute combinations
       - Unsupported template features
       - Complex nested structures that failed to generate
  --> tests/warnings/summary-not-first-child.rs:5:19
   |
 5 |       let _result = container! {
   |  ___________________^
 6 | |         details {
 7 | |             div { "First child" }
 8 | |             summary { "Not first!" }
 9 | |         }
10 | |     };
   | |_____^
   |
   = note: this error originates in the macro `container` (in Nightly builds, run with -Z macro-backtrace for more info)
